# langchain_GO

./: README.md  pyproject.toml
1_chat_models/: chat_model_basic.py
emotions_text_classify_huggingface_transformers/: app.py  text_classify_emotions_app.ipynb
