[tool.poetry]
name = "langchain crash course"
version = "0.1.0"
description = "Everything you need to know about to learn and explore langchain"
authors = ["MdSujon <octacodeer@gmail.com>"]

[tool.poetry.dependencies]

python = ">=3.10.0, <3.12"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain_community = "^0.2.1"
langchain-anthropic = "^0.1.15"
langchain-google-genai = "^1.0.5"
langchain-google-firestore = "^0.3.0" 
firestore = "^0.0.8" 
chromadb = "^0.5.0" 
tiktoken = "^0.7.0" 
sentence-transformers = "^3.0.0" 
firecrawl-py = "^0.0.13" 
langchainhub = "^0.1.18" 
wikipedia = "^1.4.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
